affilates spacing fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,8 @@
 }
 
 .affiliate {
-  height: 800px;
+  height: 100%;
+  padding: 3% 0 3% 0;
 }
 
 .nancy-header {
